syntax = "proto3";

package logstream;

option go_package = "./logstream";

service LogService { rpc LogMessage(LogEntry) returns (LogResponse); }

message LogEntry { string log_message = 1; }

message LogResponse { bool success = 1; }
